<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2014-2015 Keith Mendoza Sr
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ 	http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>

    <string name="app_name">Mendoza Bot</string>
    <string name="rightFastIcon"><![CDATA[>>>]]></string>
    <string name="rightMedIcon"><![CDATA[>>]]></string>
    <string name="rightSlowIcon"><![CDATA[>]]></string>
    <string name="stopBtnLabel">STOP</string>
    <string name="forwardBtnLabel">FORWARD</string>
    <string name="reverseBtnLabel">REVERSE</string>
    <string name="leftSlowIcon"><![CDATA[<]]></string>
    <string name="leftMedIcon"><![CDATA[<<]]></string>
    <string name="leftFastIcon"><![CDATA[<<<]]></string>
    <string name="NotConnectedStatus">Enter Robot\'s IP address then turn connection on</string>
    <string name="speedUpBtnLabel">SP UP</string>
    <string name="spDnBtnLbl">SP DN</string>

</resources>
