<!--
  ~ Copyright 2015 Keith Mendoza Sr
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ 	http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".MainActivity"
    android:columnCount="2"
    android:alignmentMode="alignBounds"
    android:useDefaultMargins="true"
    android:gravity="center_horizontal">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="Robot&apos;s IP"
            android:id="@+id/textView3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2" />

        <EditText
            android:id="@+id/robotIPText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="Enter IP address"
            android:lines="1"
            android:maxLines="1"
            android:inputType="phone" />

    </LinearLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Connection"
            android:layout_gravity="center_horizontal"
            android:paddingRight="5dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp" />

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Connect"
            android:id="@+id/activateSwitch"
            android:onClick="onActivateClicked"
            android:paddingTop="10dp"
            android:paddingBottom="10dp" />
    </LinearLayout>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:enabled="false">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forwardBtnLabel"
            android:id="@+id/forwardBtn"
            android:onClick="buttonClick"
            android:enabled="false" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reverseBtnLabel"
            android:id="@+id/reverseBtn"
            android:onClick="buttonClick"
            android:enabled="false" />
    </RadioGroup>

    <Button
        android:text="@string/speedUpBtnLabel"
        android:id="@+id/speedUpBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:onClick="buttonClick"
        android:paddingTop="10dp"
        android:paddingBottom="10dp" />

    <Button
            android:text="@string/stopBtnLabel"
            android:id="@+id/stopBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:onClick="buttonClick"
        android:paddingTop="10dp"
        android:paddingBottom="10dp" />

    <Button
            android:text="@string/spDnBtnLbl"
            android:id="@+id/speedDnBtn"
        android:layout_row="4"
        android:layout_columnSpan="4"
        android:layout_column="3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:onClick="buttonClick"
        android:paddingTop="10dp"
        android:paddingBottom="10dp" />

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/steerBar"
        android:layout_gravity="center_horizontal"
        android:max="500"
        android:progress="255"
        android:splitTrack="false"
        android:progressDrawable="@android:color/transparent"
        android:paddingTop="10dp"
        android:paddingBottom="10dp" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/statusText"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:text="@string/NotConnectedStatus" />

</LinearLayout>
